Remove old recipients resolution logic from engine